<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user1"
        android:icon="@drawable/ic_icon"
        android:title="@string/query_1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/user2"
        android:icon="@drawable/ic_icon"
        android:title="@string/query_2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/post1"
        android:icon="@drawable/ic_icon"
        android:title="@string/query_3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/post2"
        android:icon="@drawable/ic_icon"
        android:title="@string/query_4"
        app:showAsAction="always"/>

    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_icon"
        android:title="@string/query_5"
        app:showAsAction="always"/>

</menu>
